--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -257,6 +257,7 @@ body {
   font-size: 40px;
   height: 50px;
   float: left;
+  line-height: 30px;
   margin-right: 6px;
   cursor: pointer;
   position: relative;
@@ -269,8 +270,8 @@ body {
   color: #fff;
   font-size: 12px;
   position: absolute;
-  bottom: 2px;
-  right: 2px;
+  bottom: -8px;
+  right: 1px;
 }
 
 .achievement .jGrowl-header{
