--- a/htdocs/css/main.css
+++ b/htdocs/css/main.css
@@ -242,14 +242,15 @@ body {
   background-color: #8d99af;
   border: 1px solid #282d41;
   color: #282d41;
-  font-size: 40px;
+  font-size: 35px;
   height: 50px;
   float: left;
-  line-height: 30px;
+  line-height: 34px;
   margin-right: 6px;
   cursor: pointer;
   position: relative;
   text-align: center;
+  text-transform: capitalize;
   vertical-align: middle;
   width: 50px;
 }
@@ -288,9 +289,7 @@ body {
 }
 
 a.add-word {
-  border-bottom: 1px #282d41 dotted;
   font-size: 10px;
-  color: #282d41;
   margin: 0 7px;
   outline: none;
   text-decoration: none;
